[package]
name = "zotify-tagger"
description = "Adds additional metadata tags to a Zotify library"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.5.53", features = ["derive"] }
console-subscriber = "0.5.0"
deloxide = { version = "1.0.0", features = ["lock-order-graph", "logging-and-visualization"]}
dotenvy = "0.15.7"
env_logger = "0.11.8"
ffmpeg-next = "8.0.0"
futures = "0.3.31"
log = "0.4.28"
no_deadlocks = "1.3.2"
paste = "1.0.15"
rand = "0.9.2"
rspotify = { version = "0.15.1", features = ["env-file"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
sqlite = "0.37.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
